# whichcode

./: .gitignore  LICENSE  README.md  pyproject.toml
src/whichcode/: __init__.py  bm25.py  chunking.py  cli.py  code_graph.py  formatting.py  hybrid.py  local_llm.py  paths.py  query_aliases.py  ranking_rules.py  reranker.py  scanner.py  storage.py  types.py  vector.py
tests/: test_bm25.py  test_chunking.py  test_cli.py  test_code_graph.py  test_formatting.py  test_hybrid.py  test_local_llm_reranker.py  test_ranking_rules.py  test_scanner.py  test_storage.py  test_vector.py
