[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "whichcode"
version = "0.1.0"
description = "Minimal tree-sitter chunking prototype"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "bm25s>=0.2.0",
    "huggingface-hub>=0.20.0",
    "llama-cpp-python>=0.3.0",
    "model2vec>=0.4.0",
    "numpy>=1.24.0",
    "socksio>=1.0.0",
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-language-pack>=1.0,!=1.6.3,<1.8.0",
]

[project.scripts]
whichcode = "whichcode.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["case", ".venv", "build", "dist"]
